--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.6.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 distlib==0.3.4
+dj-database-url==1.2.0
 Django==4.0.2
 django-crispy-forms==1.14.0
 django-widget-tweaks==1.4.12
@@ -23,3 +24,4 @@ toml==0.10.2
 tzdata==2022.1
 urllib3==1.26.13
 virtualenv==20.14.1
+whitenoise==6.3.0
